# sqdu

./: Cargo.toml  LICENSE.txt  README.md
src/: app.rs  main.rs  ui.rs
tests/: integration_test.rs
